fix: add line break

--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -15,7 +15,9 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 ## The basics
 
-Webiny uses the term **project application** (or just **application**) in order to depict a specific logical segment of your project. Project applications are higher-level organizational units formed from one or more packages that, as the name itself suggests, form applications. Every application, essentially, consists of two pieces:
+Webiny uses the term **project application** (or just **application**) in order to depict a specific logical segment of your project.
+
+Project applications are higher-level organizational units formed from one or more packages that, as the name itself suggests, form applications. Every application, essentially, consists of two pieces:
 
 1. Your application code, which includes one or more Node.js packages. These packages can be anything from a simple GraphQL API or a single Lambda function to a complete React application.
 2. Cloud infrastructure that hosts your code or which is being utilized by it, which is also described and deployed using code. For that matter, by default, Webiny relies on a solution called [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), which is a modern infrastructure as code solution.
