--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
@@ -379,18 +379,30 @@ export default [
 
 
 :::danger
-Do not forget to rerun, rebuild and redeploy your application.
+Do not forget to rebuild, redeploy and rerun your application.
 :::
 
-```shell title="redeploy your api"
-./yarn webiny stack deploy api --env=YOUR_ENVIRONMENT
+```shell title="build api-headless-cms package"
+cd your-project-root
+yarn webiny ws run build --folder=packages/api-headless-cms
 ```
 
+```shell title="build app-headless-cms package"
+cd your-project-root
+yarn webiny ws run build --folder=packages/app-headless-cms
+```
+
+```shell title="redeploy your api"
+cd your-project-root
+yarn webiny stack deploy api --env=YOUR_ENVIRONMENT
+```
+... and
 ```shell title="rerun admin app if you are running locally"
-cd ./apps/admin/code/
+cd your-project-root/apps/admin/code/
 yarn start --env=YOUR_ENVIRONMENT
 ```
-
+... or
 ```shell title="redeploy if you are running in the cloud"
-./yarn webiny stack deploy apps/admin --env=YOUR_ENVIRONMENT
+cd your-project-root
+yarn webiny stack deploy apps/admin --env=YOUR_ENVIRONMENT
 ```
