fix: remove step 4

--- a/docs/how-to-guides/deployment/configure-aws-credentials.mdx
+++ b/docs/how-to-guides/deployment/configure-aws-credentials.mdx
@@ -107,9 +107,9 @@ aws_secret_access_key = PASTE_SECRET_ACCESS_KEY_HERE
 
 The word `default` inside the square brackets is your profile name. If you don't explicitly configure a profile name, the `default` profile is used by AWS CLI and SDK.
 
-## Step 4: Configure the default region
+<!-- ## Step 4: Configure the default region
 
-The last thing to configure is your default region. It's important to configure the region that is closest to your geographical location for optimal network latency. You can find which region is the most suitable for you using, for example, https://www.cloudping.info/. 
+The last thing to configure is your default region. It's important to configure the region that is closest to your geographical location for optimal network latency. You can find which region is the most suitable for you using, for example, https://www.cloudping.info/.
 
 To see the region codes, visit https://docs.aws.amazon.com/general/latest/gr/rande.html#regional-endpoints.
 
@@ -134,6 +134,6 @@ Now that we have our `config` file, edit the file and populate it like so:
 region = YOUR_AWS_REGION
 ```
 
-This means that for your `default` profile, that particular region is used.
+This means that for your `default` profile, that particular region is used. -->
 
 And that's it! You now have your AWS credentials, your default region, and you're ready to deploy Webiny.
