--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -64,20 +64,12 @@ Although it might sound simple enough, one thing we still have to take into cons
 
 <!-- vale on -->
 
-So, as we can see, the order of deploying does matter, and this is the reason why, out of the box, Webiny does not provide any CLI commands for a complete project deployment. The order is something Webiny cannot predict and it's up to the developers to come up with a process for a complete project deployment, if need be.
+So, as we can see, the order of deploying does matter.
 
-That being said, to make it a bit easier for users that just started using Webiny, every new Webiny project does include a helper `yarn webiny deploy` command. This command deploys the three applications that are included in a Webiny project by default, in the following order:
-
-1. **api**
-2. **apps/admin**
-3. **apps/site**
+This is the reason why, out of the box, Webiny does not provide any CLI commands for a complete project deployment. The order is something Webiny cannot predict and it's up to the developers to come up with a process for a complete project deployment, if need be.
 
 :::info
-This `yarn webiny deploy` command will suffice in a lot of cases. But again, if you are adding more applications to your project and your project is growing, then overriding the existing `deploy` command for a complete project deployment can be a reasonable thing to do. [Check out the code](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/cli/deploy/deploy.js) for the already existing command to get on the right track.
-:::
-
-:::info
-Find out more about the `yarn webiny deploy` command in the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide.
+Still, to make it a bit easier for newcoming users, every new Webiny project does include a helper `yarn webiny deploy` command. This command deploys the three applications that are included in a Webiny project by default. To learn more, visit the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide.
 :::
 
 ## FAQ
