--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -22,7 +22,9 @@ This key topics section provides general information on deployments, how they wo
 
 Project deployment is an important part of an application development lifecycle.
 
-Essentially, deploying your project entails deployment of necessary cloud infrastructure resources with the application code you wrote. It can be done from your machine directly, which is usually the case when developing, or from a remote environment, for example CI/CD systems, that, based on provided instructions, deploy your project automatically for you.
+<!-- vale off -->
+Essentially, deploying your project entails deployment of necessary cloud infrastructure resources with the application code you wrote. It can be done from your machine directly, which is usually the case when developing, or from a remote environment for example CI/CD systems, that, based on provided instructions, deploy your project automatically for you.
+<!-- vale on -->
 
 Whatever the case, Webiny makes it easy to both build and deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. Additionally, without any special configuration, you can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments).
 
@@ -30,7 +32,7 @@ Whatever the case, Webiny makes it easy to both build and deploy your project, u
 
 As explained in the [project organisation](/docs/key-topics/project-organization) section, every Webiny project can consist of one or more project applications. Furthermore, every project application consists of [application code and the necessary infrastructure](/docs/key-topics/project-applications) that's needed in order to run it.
 
-With that in mind, it's important to note that when talking about deployments, we're talking about **deploying project applications, not projects**. Meaning, if your project consisted of three project applications, in order to deploy the whole project, you would need to execute three separate Webiny CLI commands.
+With that in mind, it's important to note that when talking about deployments, we're talking about **deploying project applications, not projects**. Meaning, if your project consisted of three project applications, in order to deploy the project completely, you would need to execute three separate Webiny CLI commands.
 
 <!-- vale off -->
 
@@ -51,9 +53,8 @@ If you just want to learn how to deploy your project using [Webiny CLI](/docs/ke
 
 As stated in the section above, fully deploying a Webiny project entails deploying all of its project applications.
 
-Although it might sound simple enough, one thing we still have to take into consideration are dependent applications. In the [Project Organization](/docs/key-topics/project-organization#package-and-project-application-dependencies) key topic, it's shown that applications can be dependent on each other. For example, if we had two applications, where one represents an HTTP API, and the other a React application that relies on the API, that means the former needs to be deployed before the latter. We can't deploy a React application and expect it to work, if we don't know the URL of the API to which it needs to talk to.
-
 <!-- vale off -->
+Although it might sound simple enough, one thing we still have to take into consideration are dependent applications. In the [Project Organization](/docs/key-topics/project-organization#package-and-project-application-dependencies) key topic, it's shown that applications can be dependent on each other. For example, if we had two applications, where one represents an HTTP API, and the other a React application that relies on the API, that means the former needs to be deployed before the latter. We can't deploy a React application and expect it to work, if we don't know the URL of the API to which it needs to talk to.
 
 <img
   src={require("./assets/dependent-applications.png").default}
@@ -69,7 +70,7 @@ So, as we can see, the order of deploying does matter.
 This is the reason why, out of the box, Webiny does not provide any CLI commands for a complete project deployment. The order is something Webiny cannot predict and it's up to the developers to come up with a process for a complete project deployment, if need be.
 
 :::info
-Still, to make it a bit easier for newcoming users, every new Webiny project does include a helper `yarn webiny deploy` command. This command deploys the three applications that are included in a Webiny project by default. To learn more, visit the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide.
+Still, to make it a bit easier for new users, every new Webiny project does include a helper `yarn webiny deploy` command. This command deploys the three applications that are included in a Webiny project by default. To learn more, visit the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide.
 :::
 
 ## FAQ
