fix: correct grammar mistakes

--- a/docs/key-topics/deployment/environments.mdx
+++ b/docs/key-topics/deployment/environments.mdx
@@ -26,7 +26,7 @@ This means that you can have multiple "copies" of your project up and running at
 
 Every project most certainly has an environment called **production**. This is the environment that represents "the real thing" - the system that's being used by real users. It's in your best interest to ensure this system is always online and the code that makes it into this environment is well tested. In order to achieve this, you deploy your project to a number of pre-production environments.
 
-For example, you might have multiple **development** environments, to which developers can deploy their changes, ready to be tested by the rest of the team. Once the changes have been approved, additional round of testing can be done in a **preview**, or more commonly called, **staging** environment. This is the environment that's the closest to the **production** environment in terms of the code, different configurations, cloud infrastructure, and so on.
+For example, you might have multiple **development** environments, to which developers can deploy their changes, ready to be tested by the rest of the team. Once the changes have been approved, an additional round of testing can be done in a **preview**, or more commonly called, **staging** environment. This is the environment that's the closest to the **production** environment in terms of the code, different configurations, cloud infrastructure, and so on.
 
 :::info
 For best practices on how to organize your environments and other workflows, check out the [Workflows](#) section.
