--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -2,8 +2,8 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["webiny", "deployment", "cloud", "infrastructure", "pulumi"]
-description: Learn what is Pulumi and how Webiny is utilizing it with your project applications.
+keywords: ["webiny", "deployments", "introduction"]
+description: Learn what are deployments and how they work with Webiny.
 ---
 
 import Theme from "../../mdxComponents/theme";
@@ -23,7 +23,7 @@ This key topics section provides general information on deployments, how they wo
 Project deployment is an important part of an application development lifecycle.
 
 <!-- vale off -->
-Essentially, deploying your project entails deployment of necessary cloud infrastructure resources with the application code you wrote. It can be done from your machine directly, which is usually the case when developing, or from a remote environment for example CI/CD systems, that, based on provided instructions, deploy your project automatically for you.
+Essentially, deploying your project entails the deployment of necessary cloud infrastructure resources with the application code you wrote. It can be done from your machine directly, which is usually the case when developing, or from a remote environment for example CI/CD systems, that, based on provided instructions, deploy your project automatically for you.
 <!-- vale on -->
 
 Whatever the case, Webiny makes it easy to both build and deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. Additionally, without any special configuration, you can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments).
@@ -54,7 +54,7 @@ If you just want to learn how to deploy your project using [Webiny CLI](/docs/ke
 As stated in the section above, fully deploying a Webiny project entails deploying all of its project applications.
 
 <!-- vale off -->
-Although it might sound simple enough, one thing we still have to take into consideration are dependent applications. In the [Project Organization](/docs/key-topics/project-organization#package-and-project-application-dependencies) key topic, it's shown that applications can be dependent on each other. For example, if we had two applications, where one represents an HTTP API, and the other a React application that relies on the API, that means the former needs to be deployed before the latter. We can't deploy a React application and expect it to work, if we don't know the URL of the API to which it needs to talk to.
+Although it might sound simple enough, one thing we still have to take into consideration are dependent applications. In the [Project Organization](/docs/key-topics/project-organization#package-and-project-application-dependencies) key topic, it's shown that applications can be dependent on each other. For example, if we had two applications, where one represents an HTTP API, and the other a React application that relies on the API, that means the former needs to be deployed before the latter. We can't deploy a React application and expect it to work if we don't know the URL of the API to which it needs to talk to.
 
 <img
   src={require("./assets/dependent-applications.png").default}
@@ -67,7 +67,7 @@ Although it might sound simple enough, one thing we still have to take into cons
 
 So, as we can see, the order of deploying does matter.
 
-This is the reason why, out of the box, Webiny does not provide any CLI commands for a complete project deployment. The order is something Webiny cannot predict and it's up to the developers to come up with a process for a complete project deployment, if need be.
+This is the reason why, out of the box, Webiny does not provide any CLI commands for complete project deployment. The order is something Webiny cannot predict and it's up to the developers to come up with a process for complete project deployment if need be.
 
 :::info
 Still, to make it a bit easier for new users, every new Webiny project does include a helper `yarn webiny deploy` command. This command deploys the three applications that are included in a Webiny project by default. To learn more, visit the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide.
