fix: correct keywords and description

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -2,8 +2,8 @@
 id: deploy-your-project
 title: Deploy your project
 sidebar_label: Deploy your project
-keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
-description: Learn how to deploy your Webiny project.
+keywords: ["deploy", "project", "application", "cli"]
+description: Learn how to deploy your Webiny project and its project applications, using the Webiny CLI.
 ---
 
 :::tip What you’ll learn
