--- a/docs/key-topics/deployment/environments.mdx
+++ b/docs/key-topics/deployment/environments.mdx
@@ -2,8 +2,8 @@
 id: environments
 title: Environments
 sidebar_label: Environments
-keywords: ["webiny", "project", "environments"]
-description: Environments
+keywords: ["project", "deployment", "environments"]
+description: Learn what are environments and how they work in a Webiny project.
 ---
 
 import Theme from "../../mdxComponents/theme";
