--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -2,7 +2,7 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["webiny", "deployments", "introduction"]
+keywords: ["project", "applications", "deployments", "introduction"]
 description: Learn what are deployments and how they work with Webiny.
 ---
 
