--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -48,7 +48,7 @@ These applications are shown in the following directory tree:
 │   │   ├── Pulumi.dev.yaml
 │   │   ├── code
 │   │   └── index.ts
-│   └── site
+│   └── website
 │       ├── pulumi
 │       ├── Pulumi.dev.yaml
 │       ├── Pulumi.yaml
