--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -68,7 +68,13 @@ Three key Pulumi related concepts, that we're using in the following text, are: 
 Each of these applications are standalone [Pulumi projects](https://www.pulumi.com/docs/intro/concepts/project/#projects), which essentially means two things:
 
 - every application contains its own infrastructure-related code ([Pulumi program](https://www.pulumi.com/docs/intro/concepts/programming-model/#programs)), configuration, meta, and [state files](/docs/key-topics/deployment/iac-with-pulumi#state-files)
-- every application is deployed as a standalone unit (you cannot deploy two applications in a single operation)
+- every application is deployed separately (you cannot deploy two applications in a single operation)
+
+:::info
+Note that, by default, Webiny CLI does provide a convenient `deploy` method which deploys multiple project applications for you. And although it may seem you are completely deploying your Webiny project with a single command, internally, the command is just deploying project applications, one by one.
+
+Read more about the `deploy` command in the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide.
+:::
 
 It's also important to know you can have multiple instances of your application's cloud infrastructure up and running at the same time. This is achieved via [Pulumi stacks](https://www.pulumi.com/docs/intro/concepts/stack/):
 
@@ -82,7 +88,9 @@ The following are the key files of every Pulumi project.
 
 #### `Pulumi.yaml`
 
-The `Pulumi.yaml` project file specifies metadata about the Pulumi project. It might look something like the following:
+The `Pulumi.yaml` project file specifies metadata about the Pulumi project. There can only be one project file per Pulumi project.
+
+A `Pulumi.yaml` file might look something like the following:
 
 ```
 name: api
@@ -98,6 +106,10 @@ One of the more important properties in this file is the `backend` property, whi
 
 The `Pulumi.{stack-name}.yaml` file is a [Pulumi stack settings](https://www.pulumi.com/docs/intro/concepts/project/#stack-settings-file) file. There can be more than one stack settings files, for example, for a couple of different environments. For example, it's possible to have `Pulumi.dev.yaml`, `Pulumi.staging.yaml`, `Pulumi.production.yaml`, and so on.
 
+:::info
+Environments are explained in more detail in the following [Environments](/docs/key-topics/deployment/environments) key topic.
+:::
+
 #### `index.ts`
 
 This is the entry point file in which you start to define your infrastructure (the Pulumi program). You can organize the code in any way you like. For example, in the default API, Admin Area, and Public Website applications, the `index.ts` file just imports different classes, which encapsulate different cloud infrastructure segments. These classes can be found in the `pulumi` folder.
@@ -106,7 +118,32 @@ This is the entry point file in which you start to define your infrastructure (t
 
 Except for the files we mentioned in the previous section, there is also one other group of files the Pulumi solution produces. These are Pulumi project's state files.
 
-These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various metadata, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in your project application folder, inside the `.pulumi` folder.
+These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various metadata, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in your project application folder, inside the `.pulumi` folder, like so:
+
+```
+.
+├── api
+│   ├── .pulumi
+│   ├── pulumi
+│   ├── Pulumi.yaml
+│   ├── Pulumi.dev.yaml
+│   └── index.ts
+├── apps
+│   ├── admin
+│   │   ├── .pulumi
+│   │   ├── pulumi
+│   │   ├── Pulumi.yaml
+│   │   ├── Pulumi.dev.yaml
+│   │   └── index.ts
+│   └── website
+│       ├── .pulumi
+│       ├── pulumi
+│       ├── Pulumi.dev.yaml
+│       ├── Pulumi.yaml
+│       └── index.ts
+│  
+└── (...)
+```
 
 ## Different Backends
 
