--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -68,6 +68,10 @@ The `code` folder is where all of the application's code is located. In the case
 On the other hand, the `pulumi` folder and the `Pulumi.yaml`, `Pulumi.dev.yaml`, and `index.ts` files contain Pulumi code that define your cloud infrastructure. Again, in the case of the `api` application, these define several cloud infrastructure resources like Lambda functions, an API Gateway, a DynamoDB table, and so on. The `admin` and `website` applications contain fewer cloud resources, as they serve a bit simple (but still important) purpose.
 
 :::info
+To learn more about Pulumi and relevant files mentioned above, check the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
+:::
+
+:::info
 To learn more about the necessary cloud infrastructure resources Webiny is relying on, check out the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure) page.
 :::
 
