fix: improve state files preview

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -124,6 +124,9 @@ These files describe at what state your cloud infrastructure is currently at. Fo
 .
 ├── api
 │   ├── .pulumi
+│   │   ├── backups
+│   │   ├── history
+│   │   └── stacks
 │   ├── pulumi
 │   ├── Pulumi.yaml
 │   ├── Pulumi.dev.yaml
@@ -131,12 +134,19 @@ These files describe at what state your cloud infrastructure is currently at. Fo
 ├── apps
 │   ├── admin
 │   │   ├── .pulumi
+│   │   │   ├── backups
+│   │   │   ├── history
+│   │   │   └── stacks
 │   │   ├── pulumi
 │   │   ├── Pulumi.yaml
 │   │   ├── Pulumi.dev.yaml
 │   │   └── index.ts
 │   └── website
 │       ├── .pulumi
+│       │   ├── backups
+│       │   ├── history
+│       │   └── stacks
+│       ├── pulumi
 │       ├── pulumi
 │       ├── Pulumi.dev.yaml
 │       ├── Pulumi.yaml
