fix: add `webiny info` command tip

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -77,6 +77,10 @@ To learn more about the cloud architecture and the resources that are deployed i
 
 Finally, once the deployment has been done, you are presented with the URL over which you can access your Admin Area, and finish the installation.
 
+:::tip Misplaced Admin area URL?
+Running the `yarn webiny info` command in your Webiny project folder will give you all of the relevant project URLs.
+:::
+
 ## Troubleshooting
 
 #### The AWS Access Key Id needs a subscription for the service
